Fix icons alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -475,7 +475,7 @@ button, a {
 
 .info__icon {
   margin-right: 16px;
-  line-height: 24px; }
+  line-height: 32px; }
 
 .info__title {
   font-weight: bold;
@@ -483,11 +483,14 @@ button, a {
   line-height: 32px;
   color: #23242A; }
 
-.info__title.info__title--small {
+.info__row.info__row--small .info__title {
   font-weight: bold;
   font-size: 16px;
   line-height: 24px;
   color: #23242A; }
+
+.info__row.info__row--small .info__icon {
+  line-height: 24px; }
 
 .info__text {
   font-size: 14px;
