--- a/src/sass/layout/_solution.sass
+++ b/src/sass/layout/_solution.sass
@@ -96,7 +96,7 @@
 
 .info__icon
   margin-right: 16px
-  line-height: 24px
+  line-height: 32px
 
 .info__title
   font-weight: bold
@@ -104,11 +104,14 @@
   line-height: 32px
   color: #23242A
 
-.info__title.info__title--small
+.info__row.info__row--small .info__title
   font-weight: bold
   font-size: 16px
   line-height: 24px
   color: #23242A
+
+.info__row.info__row--small .info__icon
+  line-height: 24px
 
 .info__text
   font-size: 14px
